objects/User_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Columns_Sort_Order__c</fullName>
        <label>Columns Sort Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Available_Fields__c</fullName>
        <label>Lead Available Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date Added</fullName>
                </value>
                <value>
                    <fullName>Program Event Name</fullName>
                </value>
                <value>
                    <fullName>Partner Status</fullName>
                </value>
                <value>
                    <fullName>PSR 1</fullName>
                </value>
                <value>
                    <fullName>Campaign Description</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>State/Province</fullName>
                </value>
                <value>
                    <fullName>Main Technology</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Lead From Distributor</fullName>
                </value>
                <value>
                    <fullName>Lead Source</fullName>
                </value>
                <value>
                    <fullName>Lead Category</fullName>
                </value>
                <value>
                    <fullName>Address Line 1</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Zip/Postal Code</fullName>
                </value>
                <value>
                    <fullName>Lead Qualified Date</fullName>
                </value>
                <value>
                    <fullName>Partner Lead ID</fullName>
                </value>
                <value>
                    <fullName>Deal ID</fullName>
                </value>
                <value>
                    <fullName>Partner Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_column_order__c</fullName>
        <label>Selected column order</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>User Id + View Id should be unique</description>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_Id__c</fullName>
        <label>View Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>User Preference</label>
    <nameField>
        <label>User Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Columns_Sort_Order__c</columns>
        <columns>Lead_Available_Fields__c</columns>
        <columns>Selected_column_order__c</columns>
        <columns>User__c</columns>
        <columns>View_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>